src/main/java/es/ucm/visavet/gbf/domains/validator/DomainFilterValidator.jj
options  {
  STATIC=false;
  UNICODE_INPUT=true;
}  
PARSER_BEGIN(DomainFilterValidator)
package es.ucm.visavet.gbf.domains.validator;
public class DomainFilterValidator {
}  
PARSER_END(DomainFilterValidator)
  TOKEN:{<PATTERN:"@"<WORD>}
  TOKEN:{<AND: "&">}
  TOKEN:{<OR:  "|">}
  TOKEN:{<NOT: "!">}
  TOKEN:{<#LETTER:["a"-"z"]|["A"-"Z"]|["á","é","í","ó","ú","Á","É","Í","Ó","Ú","ñ","Ñ","Ü","ü"]>}
  TOKEN:{<#DIGIT:["0"-"9"]>}
  TOKEN:{<WORD:(<LETTER>|<DIGIT>|"-"|"*"|".")+>}
  SKIP:{<["\t"," ","\r","\b","\n"]>}  

  
  void constraint():  {} {cons0() <EOF>}
  void cons0(): {} {cons1() ((<OR>)? cons1())*}
  void cons1(): {} {cons2() (<AND> cons2())* }
  void cons2(): {} {<NOT> cons2() | cons3()}
  void cons3(): {Token tk;} 
                    {tk=<PATTERN>      | 
		     "(" cons0() ")"   } 
  


   
   
      

      
  
 
